--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/main.css" />
         <title>Search Engine</title>
     </head>
     <body>
@@ -14,9 +14,28 @@
                     <li><a href="">Email</a></li>
                     <li><a href="">Pictures</a></li>
                     <li class="menu-icon"><a href=""></a></li>
-                    <li><a href=""><img src="" alt=""></a></li>
+                    <li>
+                        <a href=""><img src="" alt="" /></a>
+                    </li>
                 </ul>
             </nav>
         </header>
+
+        <main>
+            <section class="main-logo">
+                <img src="" alt="" />
+            </section>
+            <section class="main-input">
+                <div class="main-input-container">
+                    <span class="search-icon"> </span>
+                    <input type="text" />
+                    <a class="micro-icon" href=""></a>
+                </div>
+            </section>
+            <section class="main-buttons">
+                <div><button>Search</button></div>
+                <div><button>Feeling Lucky</button></div>
+            </section>
+        </main>
     </body>
 </html>
