--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <main>
             <section class="main-logo">
-                <img src="" alt="" />
+                <img src="img/logo.png" alt="Search Logo" />
             </section>
             <section class="main-input">
                 <div class="main-input-container">
@@ -37,5 +37,18 @@
                 <div><button>Feeling Lucky</button></div>
             </section>
         </main>
+
+        <footer>
+            <ul class="footer-left">
+                <li><a href="">Advertising</a></li>
+                <li><a href="">Business</a></li>
+                <li><a href="">About</a></li>
+            </ul>
+            <ul class="footer-right">
+                <li><a href="">Privacy</a></li>
+                <li><a href="">Terms</a></li>
+                <li><a href="">Settings</a></li>
+            </ul>
+        </footer>
     </body>
 </html>
